--- a/todo-front/src/Style/style.css
+++ b/todo-front/src/Style/style.css
@@ -129,7 +129,7 @@ input[type=number] {
 }
 
 #home .todo-container {
-    padding: 0 8rem;
+    /* padding: 0 8rem; */
 }
 
 #home .header {
@@ -216,4 +216,19 @@ input[type=number] {
 
 #home .todo-box-btns .editIcon:hover {
     color: darkgreen
+}
+
+#home .todo-box-title {
+    cursor: pointer;
+}
+
+.task-show-label {
+    font-weight: 600;
+}
+
+.task-show-values {
+    background-color: white;
+    /* background-color: #D3E0DC; */
+    border-radius: 5px;
+    padding: 15px;
 }
