--- a/todo-front/src/Style/style.css
+++ b/todo-front/src/Style/style.css
@@ -129,7 +129,7 @@ input[type=number] {
 }
 
 #home .todo-container {
-    /* padding: 0 8rem; */
+    padding: 0 8rem;
 }
 
 #home .header {
@@ -192,6 +192,7 @@ input[type=number] {
 }
 
 #home .completeBtn .checkIcon {
+    background-color: white;
     color: rgb(0, 169, 0);
     border-radius: 50%;
     transition: 0.4s ease;
